Starting SIFT feature detector

--- a/ComputerVision/cpp/CMakeLists.txt
+++ b/ComputerVision/cpp/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES
     src/ArtifactDetectors/Edges/CannyEdgeDetector.h
     src/ArtifactDetectors/Corners/HarrisCornerDetector.h
     src/BasicTransforms/MiscTransforms.h
+    src/ArtifactDetectors/FeatureDiscriptors/ScaleInvarientFeatureTransform.h
     src/Driver/Driver.cpp
 )
 
