--- a/OsKernal/Makefile
+++ b/OsKernal/Makefile
@@ -1,4 +1,5 @@
-FILES = ./build/kernel.asm.o ./build/kernel.o
+FILES = ./build/kernel.asm.o ./build/kernel.o ./build/idt/idt.asm.o ./build/memory/memory.o ./build/idt/idt.o
+
 INCLUDES = -I./src
 
 FLAGS = -g -ffreestanding -nostdlib -falign-jumps -falign-functions -falign-labels -falign-loops -fstrength-reduce -fomit-frame-pointer -finline-functions -Wno-unused-function -fno-builtin -Werror -Wno-unused-label -Wno-cpp -Wno-unused-parameter -nostdlib -nostartfiles -nodefaultlibs -Wall -O0 -Iinc
@@ -21,6 +22,15 @@ all: ./bin/boot.bin ./bin/kernel.bin
 
 ./build/kernel.o: ./src/kernel.c 
 	i686-elf-gcc -std=gnu99 $(INCLUDES) $(FLAGS) -c ./src/kernel.c -o ./build/kernel.o
+
+./build/idt/idt.asm.o: ./src/idt/idt.asm
+	nasm -f elf -g ./src/idt/idt.asm -o ./build/idt/idt.asm.o
+
+./build/idt/idt.o: ./src/idt/idt.c 
+	i686-elf-gcc -std=gnu99 $(INCLUDES) -I./src/idt $(FLAGS) -c ./src/idt/idt.c -o ./build/idt/idt.o
+
+./build/memory/memory.o: ./src/memory/memory.c 
+	i686-elf-gcc -std=gnu99 $(INCLUDES) -I./src/memory $(FLAGS) -c ./src/memory/memory.c -o ./build/memory/memory.o
 
 
 clean:
